# Job-Hunter

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  Procfile  README.md  app.py  bot.py  bot_legacy.py  bot_main.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run_bot.py  setup.py  simple_bot.py  start.sh  test_bot.py  test_real_jobs.py
.github/workflows/: ci-cd.yml
backend/: __init__.py
backend/agents/: apply_agent.py  global_search_agent.py  jd_analyzer_agent.py  resume_agent.py  skill_gap_agent.py
backend/database/: models.py  mongo.py
backend/providers/: ai_router.py
backend/resume/: pdf_builder.py  resume_generator.py
backend/scrapers/: github_jobs_scraper.py  indeed_scraper.py  linkedin_scraper.py  naukri_scraper.py  remoteok_scraper.py
backend/telegram/: commands.py  handlers.py  telegram_bot.py
tests/: test_ai_router.py
