"""
Deployment Configuration
"""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-hunter"
version = "1.0.0"
description = "AI-powered job search and application automation system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AI Team"}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
